# pod2

./: .gitignore  .typos.toml  Cargo.toml  Justfile  NOTES.md  helper.sh  main.py  playground.sh  results.md  rust-analyzer.toml  rust-toolchain.toml  scratch
.github/: typos.toml
.github/workflows/: build.yml  deploy-playground.yml  mainpod-circuit-info-publish.yml  mdbook-publish.yml  tests.yml  typos.toml  typos.yml
.github/workflows/scripts/: mainpod-circuit-info-table.sh
book/src/: SUMMARY.md  anchoredkeys.md  arithmeticdeductions.md  average.md  backendtypes.md  custom.md  customexample.md  custompred.md  examples.md  merkleexample.md  merklestatements.md  merkletree.md  operations.md  scratch  simpleexample.md  statements.md  values.md
examples/: bench.rs  main_pod_balance.rs  main_pod_points.rs  signed_dict.rs  signed_pod.rs
playground/: README.md  index.html
pod2/: Cargo.toml
src/: constants.rs  error.rs  examples.rs  frontend.rs  lib.rs  util.rs  wasm.rs
src/backends/mock_main/: statement.rs
src/backends/plonky2/: basetypes.rs  common.rs  emptypod.rs  error.rs  main.rs  mainpod.rs  mock_signed.rs  mod.rs  serialization.rs  signedpod.rs  signer.rs
src/cache/: disk.rs  mem.rs  mod.rs
src/examples/: custom.rs  mod.rs
src/frontend/: containers.rs  custom.rs  error.rs  mod.rs  operation.rs  pod_request.rs  predicate.rs  serialization.rs  statement.rs
src/frontend/multi_pod/: cost.rs  deps.rs  diagnostics.rs  frontier_solver.rs  layout.rs  mod.rs  packing_solver.rs  partition.rs  partition_milp.rs  shape.rs  solution.rs  solver.rs
src/frontend/multi_pod_tree/: cost.rs  deps.rs  diagnostics.rs  mod.rs  partition.rs  partition_milp.rs  shape.rs
src/lang/: ast.rs  diagnostics.rs  error.rs  frontend_ast.rs  frontend_ast_batch.rs  frontend_ast_lift.rs  frontend_ast_lower.rs  frontend_ast_split.rs  frontend_ast_split_milp.rs  frontend_ast_validate.rs  grammar.pest  mod.rs  module.rs  parser.rs  pod_request.rs  pretty_print.rs  processor.rs  utils.rs
src/middleware/: basetypes.rs  containers.rs  convert.rs  custom.rs  error.rs  mod.rs  operation.rs  pod_deserialization.rs  serialization.rs  serializer.rs  statement.rs
src/middleware/db/: mem.rs  mod.rs  rocks.rs
src/primitives/: merkletree.rs
src/prover/: engine.rs  error.rs  mod.rs  pod_building.rs  runtime.rs  test_utils.rs  tests.rs  translation.rs  types.rs  visualization.rs
src/prover/indexing/: mod.rs
src/prover/solver/: initialization.rs  mod.rs  proof.rs  pruning.rs  search.rs  tests.rs  types.rs
src/server/: db.rs  error.rs  handlers.rs  mod.rs  routes.rs  setup.rs  storage.rs  tests.rs  types.rs
src/solver/: README.md  db.rs  debug.rs  error.rs  explainer.rs  ir.rs  metrics.rs  mod.rs  planner.rs  proof.rs  vis.rs
src/web/: mod.rs
static/: index.html
static/css/: style.css
static/js/: app.js
web/: mprocs.yaml  package.json  pnpm-lock.yaml  vitest.config.ts
web/src/: App.tsx  main.tsx  routes.tsx
(+134 files in other folders)
