[package]
name = "pod2"
version = "0.1.0"
edition = "2021"

[lib]
name = "pod2"
path = "src/lib.rs"

[[bin]]
name = "pod2-server"
path = "src/bin/server.rs"

[dependencies]
hex = "0.4.3"
itertools = "0.14.0"
strum = "0.26"
strum_macros = "0.26"
anyhow = "1.0.56"
dyn-clone = "1.0.18"
# enabled by features:
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2", optional = true }
serde = "1.0.219"
serde_json = "1.0.140"
base64 = "0.22.1"
# Web server dependencies
actix-web = "4.4.1"
actix-cors = "0.6.5"
actix-files = "0.6.2"
env_logger = "0.10.1"
log = "0.4.20"
uuid = { version = "1.5.0", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.28"

[features]
default = ["backend_plonky2"]
backend_plonky2 = ["plonky2"]
