[package]
name = "pod2"
version = "0.1.0"
edition = "2021"

[lib]
name = "pod2"
path = "src/lib.rs"

[dependencies]
hex = "0.4.3"
itertools = "0.14.0"
strum = "0.26"
strum_macros = "0.26"
anyhow = "1.0.56"
dyn-clone = "1.0.18"
log = "0.4"
env_logger = "0.11"
lazy_static = "1.5.0"
thiserror = { version = "2.0.12" }
# enabled by features:
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2", optional = true }
serde = "1.0.219"
serde_json = "1.0.140"
base64 = "0.22.1"
schemars = "0.8.22"
petgraph = "0.6"
pest = "2.8.0"
pest_derive = "2.8.0"
rusqlite = { version = "0.33.0", features = ["bundled"] }
deadpool-sqlite = { version = "0.10.0", features = ["rt_tokio_1"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
config = { version = "0.14", features = ["toml"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"

# Uncomment for debugging with https://github.com/ed255/plonky2/ at branch `feat/debug`.  The repo directory needs to be checked out next to the pod2 repo directory.
# [patch."https://github.com/0xPolygonZero/plonky2"]
# plonky2 = { path = "../plonky2/plonky2" }

[dev-dependencies]
pretty_assertions = "1.4.1"
# Used only for testing JSON Schema generation and validation.
jsonschema = "0.30.0"
rand = "0.8"
tempfile = "3.10" # For creating temporary config files in tests
axum-test = "14.0" # For testing Axum handlers
chrono = { version = "0.4", features = ["serde"] } # For timestamps

[features]
default = ["backend_plonky2"]
backend_plonky2 = ["plonky2"]
